# Webcam-Streaming

./: .gitignore  CMakeLists.txt  H264LiveServerMediaSession.cpp  INSTALL  LiveSourceWithx264.cpp  Makefile  README.md  webcam.cpp  x264Encoder.cpp
includes/: H264LiveServerMediaSession.h  LiveSourceWithx264.h  x264Encoder.h
libraries/live/liveMedia/: Makefile
libraries/live/mediaServer/: live555MediaServer
libraries/live/proxyServer/: live555ProxyServer
libraries/live/testProgs/: MPEG2TransportStreamIndexer  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testOnDemandRTSPServer  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
patch/: live_debug_patch
source/: LiveSourceWithx264.cpp  x264Encoder.cpp
src/: .webcam.cpp.swp  H264LiveServerMediaSession.cpp  LiveSourceWithx264.cpp  webcam.cpp  x264Encoder.cpp
